# SceneSculpt

./: README.md  modal_segment.py  modal_train.py  pyproject.toml  splats.ply
scenesculpt/: __init__.py
scenesculpt/editor/: __init__.py  viewer.py
scenesculpt/pipeline/: __init__.py  extract_frames.py  run_colmap.py  train_splats.py
scenesculpt/scene/: __init__.py  gaussian.py
scenesculpt/segmentation/: __init__.py  segment.py
scripts/: launch_editor.py  process_video.py
